ADD: 完善登录逻辑
