# docs/swagger.yaml
@@ -60,6 +60,29 @@ paths:
       summary: 删除用户
       tags:
       - 用户模块
+  /user/findUserByNameAndPassword:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: 用户名
+        in: formData
+        name: name
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code", "message"}
+          schema:
+            type: string
+      summary: 按用户名和密码查找
+      tags:
+      - 用户模块
   /user/getUserList:
     get:
       consumes:
@@ -90,6 +113,14 @@ paths:
       - description: 密码
         in: formData
         name: password
+        type: string
+      - description: 邮箱
+        in: formData
+        name: email
+        type: string
+      - description: 电话
+        in: formData
+        name: phone
         type: string
       produces:
       - application/json
